--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,11 @@
-<h1>Welcome to SnapStereo!</h1>
-
-
-<%= button_to "Sign Up", signup_path, :method => "get" =%>
-<%= button_to "Sign In", signin_path, :method => "get" =%>
+<% provide(:title, 'Home') %>
+<div class="center hero-unit">
+  <h1>Welcome to SnapStereo!</h1>
+  
+  <h2>
+    SnapStereo lets you rate songs in a quick and easy way.
+  </h2>
+  <%= button_to "Sign In", signin_path, :method => "get" =%>
+  <%= button_to "Sign Up", signup_path, :method => "get" =%>
+  
+</div>
