--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,11 @@
         <ul class="nav pull-right">
           <li><%= link_to "Home",    root_path %></li>
           <li><%= link_to "Help",    help_path %></li>
-          <li><%= link_to "Sign in", signin_path %></li>
+          <li><% if session[:remember_token] != nil %>
+                <%= link_to "Sign out", signout_path, method: "delete"%>
+              <% else %>
+                <%= link_to "Sign in", signin_path%>
+              <% end %></li>
         </ul>
       </nav>
     </div>
