--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
           <li><% if session[:remember_token] != nil %>
                 <%= link_to "Sign out", signout_path, method: "delete"%>
               <% else %>
-                <%= link_to "Sign in", signin_path%>
+                <%= link_to "Sign in", root_path%>
               <% end %></li>
         </ul>
       </nav>
