--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,7 @@
-
 <% provide(:title, 'Sign Up') %>
 <h1>Sign Up</h1>
     <%= form_for(@user) do |f| %>
-     
+    <%= render 'shared/error_messages' %>
 
       <%= f.label :name %>
       <%= f.text_field :name %>
