--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,13 +4,31 @@
       <%= link_to "", root_path, id: "logo" %>
       <nav>
         <ul class="nav pull-right">
-          <li><%= link_to "Home",    root_path %></li>
-          <li><%= link_to "Help",    help_path %></li>
+          <li id="fat-menu" class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                    <i class="icon-music"></i> Stereo <b class="caret"></b>
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><%= link_to "Shuffle Snap", '#' %></li>
+                    <li><%= link_to "Search Snap", '#' %></li>
+                  </ul>
+                </li>
           <li><% if session[:remember_token] != nil %>
-                <%= link_to "Sign out", signout_path, method: "delete"%>
+                <li id="fat-menu" class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                    Account <b class="caret"></b>
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><%= link_to "My Snaps", '#' %></li>
+                    <li><%= link_to "Upload", '#' %></li>
+                    <li><%= link_to "Account Settings", edit_user_path(session[:remember_token]) %></li>
+                    <li class="divider"></li>
+                    <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
+                  </ul>
+                </li>
               <% else %>
-                <%= link_to "Sign in", root_path%>
-              <% end %></li>
+                <li><%= link_to "Sign in", root_path%></li>
+              <% end %>
         </ul>
       </nav>
     </div>
